--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
             iste libero necessitatibus nemo odio praesentium, quia, quidem recusandae repellendus sequi sit sunt ullam veritatis voluptatibus! Assumenda at corporis enim eveniet
             explicabo itaque magni perspiciatis porro quibusdam tenetur.</p>
 
+        <button class="p-3">Click Me</button>
+
+        <div class="bg-img"></div>
+
         <ul>
             <li>lorem_01</li>
             <li>lorem_02</li>
@@ -24,9 +28,13 @@
             <li>lorem_04</li>
             <li>lorem_05</li>
         </ul>
+
+        <img src="./images/image.jpg" alt="">
     </main>
 
     <footer>
+        <div class="image"></div>
+
         <p class="copyright">copyright</p>
     </footer>
 </div>
