--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
             iste libero necessitatibus nemo odio praesentium, quia, quidem recusandae repellendus sequi sit sunt ullam veritatis voluptatibus! Assumenda at corporis enim eveniet
             explicabo itaque magni perspiciatis porro quibusdam tenetur.</p>
 
+        <select name="" id="">
+            <option value="">item01</option>
+            <option value="">item02</option>
+            <option value="">item03</option>
+        </select>
+
         <button class="p-3">Click Me</button>
 
         <div class="bg-img"></div>
